downloads-manager: Add another assert

Something is wrong here. This assert will help catch it.

https://bugzilla.gnome.org/show_bug.cgi?id=778653